--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=5000
 DB_HOST=localhost
 DB_USER=postgres
-DB_NAME=oop
-DB_PASSWORD=145415
+DB_NAME=tryoop
+DB_PASSWORD=postgres
 DB_PORT=5432
 SMTP_HOST=smtp.mail.ru
 SMTP_PASSWORD=PFw6RrKEef2J8jkWdfHs
