--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
-        "start:dev": "nest start --watch",
+        "start:dev": "npx sequelize-cli db:seed:all && nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -43,6 +43,7 @@
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
         "sequelize": "^6.21.4",
+        "sequelize-cli": "^6.5.2",
         "sequelize-typescript": "^2.1.3",
         "uuid": "^8.3.2"
     },
