--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
-        "start:dev": "npx sequelize-cli db:seed:all && nest start --watch",
+        "start:devdb": "npx sequelize-cli db:seed:all && nest start --watch",
+        "start:devmain": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
