add: picture by request

--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ SMTP_PORT=465
 SMTP_USER=project.oop@mail.ru
 PRIVATE_KEY=secret_key_safasf
 API_URL=localhost:5000/user/activ/
-URL_FOR_IMG = http://localhost:5000/img/
+URL_FOR_IMG = http://localhost:5000/sendfile/img/
