--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         image: postgres:13.3
         environment:
             POSTGRES_DB: 'tryoop'
-            POSTGRES_USER: 'postgres'
+            POSTGRES_USER: 'habrpguser'
             POSTGRES_PASSWORD: 'postgres'
             PGDATA: '/var/lib/postgresql/data/tryoop'
         volumes:
