--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=5000
 DB_HOST=localhost
-DB_USER=postgres
-DB_NAME=tryoop
+DB_USER=habrpguser
+DB_NAME=habrdb
 DB_PASSWORD=postgres
 DB_PORT=5432
 SMTP_HOST=smtp.mail.ru
