back to reality

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=5000
 DB_HOST=localhost
-DB_USER=habrpguser
-DB_NAME=habrdb
-DB_PASSWORD=postgres
+DB_USER=root
+DB_NAME=tryoop
+DB_PASSWORD=root
 DB_PORT=5432
 SMTP_HOST=smtp.mail.ru
 SMTP_PASSWORD=PFw6RrKEef2J8jkWdfHs
