--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "habrpguser",
-    "password": "postgres",
-    "database": "habrdb",
+    "username": "root",
+    "password": "root",
+    "database": "tryoop",
     "host": "127.0.0.1",
     "dialect": "postgresql"
   },
