--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     postgres:
         image: postgres:13.3
         environment:
-            POSTGRES_DB: 'tryoop'
-            POSTGRES_USER: 'root'
-            POSTGRES_PASSWORD: 'root'
+            POSTGRES_DB: 'habrdb'
+            POSTGRES_USER: 'habrpguser'
+            POSTGRES_PASSWORD: 'postgres'
             PGDATA: '/var/lib/postgresql/data/tryoop'
         volumes:
             - ../2. Init Database:/docker-entrypoint-initdb.d
@@ -13,7 +13,7 @@ services:
         ports:
             - '5432:5432'
         healthcheck:
-            test: ['CMD-SHELL', 'pg_isready -U root -d tryoop']
+            test: ['CMD-SHELL', 'pg_isready -U habrpguser -d habrdb']
             interval: 10s
             timeout: 5s
             retries: 5
