--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,23 @@
 {
-  "development": {
-    "username": "habrpguser",
-    "password": "postgres",
-    "database": "habrdb",
-    "host": "127.0.0.1",
-    "dialect": "postgresql"
-  },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  }
+    "development": {
+        "username": "postgres",
+        "password": "postgres",
+        "database": "tryoop",
+        "host": "127.0.0.1",
+        "dialect": "postgresql"
+    },
+    "test": {
+        "username": "root",
+        "password": null,
+        "database": "database_test",
+        "host": "127.0.0.1",
+        "dialect": "mysql"
+    },
+    "production": {
+        "username": "root",
+        "password": null,
+        "database": "database_production",
+        "host": "127.0.0.1",
+        "dialect": "mysql"
+    }
 }
