--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     postgres:
         image: postgres:13.3
         environment:
-            POSTGRES_DB: 'habrdb'
-            POSTGRES_USER: 'habrpguser'
+            POSTGRES_DB: 'tryoop'
+            POSTGRES_USER: 'postgres'
             POSTGRES_PASSWORD: 'postgres'
             PGDATA: '/var/lib/postgresql/data/tryoop'
         volumes:
@@ -13,7 +13,7 @@ services:
         ports:
             - '5432:5432'
         healthcheck:
-            test: ['CMD-SHELL', 'pg_isready -U habrpguser -d habrdb']
+            test: ['CMD-SHELL', 'pg_isready -U postgres -d tryoop']
             interval: 10s
             timeout: 5s
             retries: 5
